Adjust z-index to display elements in correct order

--- a/css/main.css
+++ b/css/main.css
@@ -36,24 +36,23 @@ header {
 }
 
 .logo {
-  z-index: 1;
+  z-index: 2;
   grid-area: header;
   grid-row: 2;
   grid-column: 1;
   width: 14rem;
   padding: 0 0 0 1rem;
-  margin-bottom: 1rem;
 }
 
 .pano {
   grid-area: header;
-  grid-column: 1/span 2;
+  grid-column: 1 / span 2;
   grid-row: 1 / span 2;
   z-index: 1;
 }
 
 nav {
-  z-index: 50;
+  z-index: 3;
   grid-row: 1;
   grid-column: 2;
 }
@@ -71,7 +70,7 @@ ul li {
   display: inline;
   color: #fff;
   text-decoration: none;
-  padding: 1rem;
+  padding: .75rem;
 }
 
 a {
@@ -80,8 +79,8 @@ a {
 }
 
 main {
-  grid-area: figure;
   display: grid;
+  grid-area: figure;
   grid-template-columns: 1fr 1fr;
   margin: 0;
   padding: 0;
@@ -96,7 +95,6 @@ figure {
 h2 {
   font-family: "Patua One", sans-serif;
   font-weight: bold;
-  outline-color: #f2f1ed;
   color: #30658d;
   padding-bottom: 0;
   margin-bottom: 0;
